# rust-fp

./: Cargo.toml  README.md  flake.nix  no-fhs-flake.nix
cli/: Cargo.toml  test.sh
cli/src/: fp_file.rs  get_templates.rs  main.rs  set_templates.rs  template.rs
common/: Cargo.toml
common/src/: cros_fp_proxy.rs  enroll_step_dbus_output.rs  enroll_step_dbus_result.rs  enrolling_status_data.rs  fp_file.rs  get_templates.rs  get_templates_dir.rs  lib.rs  rust_fp_dbus.rs  rust_fp_proxy.rs  seed.rs  sensor_info.rs  set_templates.rs
dbus-interface/: Cargo.toml  org.crosfp.CrosFp.conf  org.rust_fp.RustFp.conf  test.sh
dbus-interface/src/: get_user_id.rs  main.rs
ectool_fp/: Cargo.toml
ectool_fp/src/: fp_enroll.rs  fp_get_info.rs  fp_get_stats.rs  fp_get_template.rs  fp_hello.rs  fp_load_template.rs  fp_mode.rs  fp_reset.rs  fp_reset_sensor.rs  fp_seed.rs  lib.rs
pam-module/: Cargo.toml
pam-module/src/: lib.rs  wait_until_unlock.rs
pam_module/: Cargo.toml  test.sh
pam_module/src/: fp_seed.rs  lib.rs
rust-fp/: Cargo.toml
rust-fp/src/: fingerprint_driver.rs  lib.rs
rust-fp/src/drivers/: cros_fp.rs  mod.rs
