[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
die-exit = "0.5.0"
substring = "1.4.5"
whoami = "1.5.0"
zbus = "4.1.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.197"
rmp-serde = "1.1.2"
async-std = "1.12.0"
home = "0.5.9"
postcard = "1.0.8"
rust-fp = { version = "0.1.0", path = "../rust-fp", features = ["serde"] }
