[package]
name = "rust-fp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-fp"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rust-fp-common = { version = "0.1.0", path = "../common" }
zbus = "4.1.2"
async-std = "1.12.0"
postcard = "1.0.8"
rust-fp = { version = "0.1.0", path = "../rust-fp", features = ["serde"] }
