[package]
name = "rust-fp-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rust-fp"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rust-fp-common = { path = "../common" }
zbus = "4.1.2"
async-std = { version = "1.12.0", features = ["attributes"] }
postcard = "1.0.8"
rust-fp = { path = "../rust-fp", features = ["serde"] }
