[package]
name = "common"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ectool_fp = { version = "0.1.0", path = "../ectool_fp" }
serde = { version = "1.0.197", features = ["derive"] }
zbus = "4.1.2"
