[package]
name = "rust-fp-common"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
home = "0.5.9"
rmp-serde = "1.3.0"
rust-fp = { version = "0.1.0", path = "../rust-fp", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
zbus = "4.1.2"
