[package]
name = "rust-fp-common"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
home = "0.5.9"
log = "0.4.22"
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }
rand = "0.8.5"
rmp-serde = "1.3.0"
rust-fp = { path = "../rust-fp", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
zbus = "4.1.2"
