[package]
name = "rust-fp-dbus-interface"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
rust-fp-common = { version = "0.1.0", path = "../common" }
zbus = "4.3.1"
log = "0.4.21"
rust-fp = { version = "0.1.0", path = "../rust-fp", features = ["serde"] }
simple_logger = "5.0.0"
