[package]
name = "rust-fp-pam-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rust-fp-common = { path = "../common" }
pam-bindings = "0.1.1"
pollster = "0.3.0"
postcard = "1.0.8"
rand = "0.8.5"
rust-fp = { path = "../rust-fp" }
zbus = "4.3.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
