[package]
name = "cros-fp-pam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
common = { version = "0.1.0", path = "../common" }
crossbeam = "0.8.4"
ectool_fp = { version = "0.1.0", path = "../ectool_fp" }
pam-bindings = "0.1.1"
pam-client = "0.5.0"
rand = "0.8.5"
whoami = "1.5.1"
