[package]
name = "rust-fp"
edition = "2021"
version = "1.0.0"

[dependencies]
futures = "0.3.30"
crosec = { git = "https://github.com/ChocolateLoverRaj/crosec-rs/", branch = "more-commands" }
async-std = "1.12.0"
serde = { version = "1.0.203", optional = true }
anyhow = "1.0.86"

[features]
serde = ["dep:serde"]
